fix: add important flag to responsive

--- a/index.html
+++ b/index.html
@@ -169,11 +169,12 @@
 
       @media (max-width: 840px) {
         .main-login {
-          padding: 0rem 5% 0;
+          padding: 0rem 5% 0 !important;
         }
 
         .main-login > section {
-          min-width: 100%;
+          min-width: 100% !important
+          ;
         }
       }
     </style>
