fix resolve problem of design

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       }
 
       .main-login > section {
-        min-width: 48.5%;
+        min-width: 48.5% !important;
       }
 
       section:has(form) {
