fix:  show message error

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 
       #attributeList ul {
         padding: 0;
+        list-style: none;
       }
 
       .attrEntry {
@@ -149,11 +150,6 @@
       }
 
       .error.itemLevel {
-        position: absolute;
-        right: 0;
-        top: -36%;
-      }
-      .error.itemLevel > p {
         color: #eb001b !important;
       }
 
