feat: customize waiting dev

--- a/index.html
+++ b/index.html
@@ -149,7 +149,14 @@
         color: white;
       }
 
-      .error.itemLevel {
+      #waiting {
+        background-color: white !important;
+        border-radius: 0.5rem !important;
+        padding: 0.5rem;
+      }
+
+      .error.itemLevel,
+      .error {
         color: #eb001b !important;
       }
 
