--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
         color: white;
       }
 
-      #waiting {
+      .simplemodal-container {
         background-color: white !important;
         border-radius: 0.5rem !important;
-        padding: 0.5rem;
+        padding: 0.5rem !important;
       }
 
       .error.itemLevel,
