--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
         color: white;
       }
 
+      .simplemodal-overlay {
+        height: fit-content !important;
+      }
       .simplemodal-container {
+        height: fit-content !important;
         background-color: white !important;
         border-radius: 0.5rem !important;
         padding: 0.5rem !important;
