feat: remove .simplemodal-overlay

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
         color: white;
       }
 
-      .simplemodal-overlay {
+      /* .simplemodal-overlay {
         height: fit-content !important;
-      }
+      } */
       .simplemodal-container {
         height: fit-content !important;
         background-color: white !important;
